Removed unnecessary Benchmarks and Processors.